client side with webpack and express server working

--- a/lorcana-learner/src/index.html
+++ b/lorcana-learner/src/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lorcana Learner</title>
-<script defer src="/main-bundle.js"></script></head>
+</head>
 <body>
     <div class="container">
         <div class="main">
-            <img src="/assets/lorcana-logo-full.jpeg" alt=""/>
+            <img src="./images/lorcana-logo-full.jpeg" alt=""/>
             <h1>Welcome to Lorcana Learner!</h1>
         </div>
     </div>
