added deck curve graph to deck-info

--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
             <img id="first-ink" class="ink-token">
             <img id="second-ink" class="ink-token">
             <span id="card-count">0/60</span>
+            <canvas id="deck-curve" width="400" height="250"></canvas>
         </div>
         <div id="deck"></div>
         <div id="booster-pack"></div>
