Show graph on icon hover

--- a/src/index.html
+++ b/src/index.html
@@ -17,10 +17,13 @@
             </p>
         </div>
         <div id="deck-info">
-            <img id="first-ink" class="ink-token">
-            <img id="second-ink" class="ink-token">
+            <img id="first-ink" class="ink-token" src="images/lorcana-icon.png">
+            <img id="second-ink" class="ink-token" src="images/lorcana-icon.png">
+            <div id="graph-icon">
+                <img src="images/icons/graph-icon.png" style="width: 90%; height: 90%; padding: 5%;">
+                <canvas id="deck-curve" width="400" height="250"></canvas>
+            </div>
             <span id="card-count">0/60</span>
-            <canvas id="deck-curve" width="400" height="250"></canvas>
         </div>
         <div id="deck"></div>
         <div id="booster-pack"></div>
