Generate card export string

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
                 <input id="import-code" type="text" placeholder="Pixelborn Import Code">
                 <button onclick="deckpage.loadDeckFromBase64(document.getElementById('import-code').value)">Import</button>
                 <a href="https://www.reddit.com/r/Lorcana/comments/1bgn2ug/pixelborn_import_codes_for_official_starter_decks/" target="_blank">Choose Starter Deck</a>
+                <button onclick="deckpage.exportDeck()">Export to Pixelborn</button>
                 <button onclick="boosterpage.getBoosterPack()">Get Booster pack</button>
             </p>
         </div>
