Add window to copy pixelborn output code

--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,11 @@
         </div>
         <div id="deck"></div>
         <div id="booster-pack"></div>
+        <div id="export-window">
+            <textarea id="pixelborn-code"></textarea>
+            <p>Copy the text and paste into Pixelborn deck builder in order to use your deck in game.</p>
+            <button id="close-export-window" onclick="deckpage.closeExportWindow()">Close</button>
+        </div>
     </body>
     
 </html>
