Populate card counts for each ink and total

--- a/src/index.html
+++ b/src/index.html
@@ -17,13 +17,13 @@
             </p>
         </div>
         <div id="deck-info">
-            <img id="first-ink" class="ink-token" src="images/lorcana-icon.png">
-            <img id="second-ink" class="ink-token" src="images/lorcana-icon.png">
+            <img id="first-ink" class="ink-token" src="images/lorcana-icon.png"><span id="card-count-first" class="card-counter ink-card-counter">0</span>
+            <img id="second-ink" class="ink-token" src="images/lorcana-icon.png"><span id="card-count-second" class="card-counter ink-card-counter">0</span>
             <div id="graph-icon">
                 <img src="images/icons/graph-icon.png" style="width: 90%; height: 90%; padding: 5%;">
                 <canvas id="deck-curve" width="400" height="250"></canvas>
             </div>
-            <span id="card-count">0/60</span>
+            <span id="card-count" class="card-counter">0/60</span>
         </div>
         <div id="deck"></div>
         <div id="booster-pack"></div>
