--- a/src/index.html
+++ b/src/index.html
@@ -10,11 +10,11 @@
     <body>
         <div id="top-bar">
             <p>
+                <button onclick="deckpage.showHideStarterDeckSelector('block')">Choose Starter Deck</button>
                 <input id="import-code" type="text" placeholder="Pixelborn Import Code">
                 <button onclick="deckpage.loadDeckFromBase64(document.getElementById('import-code').value)">Import</button>
-                <button onclick="deckpage.showHideStarterDeckSelector('block')">Choose Starter Deck</a>
-                <button onclick="deckpage.exportDeck()">Export to Pixelborn</button>
                 <button onclick="boosterpage.getBoosterPack()">Get Booster pack</button>
+                <button onclick="deckpage.exportDeck()">Export to Pixelborn</button>
             </p>
         </div>
         <div id="deck-info">
